--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 [class*="col-"] {
   width: 100%;
 }
@@ -5,6 +10,19 @@
 [class*="col-"] {
   float: left;
   padding: 15px;
+}
+
+#login .container #login-row #login-column #login-box {
+  margin: 30px 0;
+  max-width: 600px;
+  height: 100%;
+  min-height: 320px;
+  border: 1px solid #9c9c9c;
+  background-color: #eaeaea;
+}
+
+#login .container #login-row #login-column #login-box #login-form {
+  padding: 10px 20px;
 }
 
 @media only screen and (min-width: 550px) {
