--- a/src/styles.css
+++ b/src/styles.css
@@ -25,6 +25,17 @@
   padding: 10px 20px;
 }
 
+#customButton {
+  display: inline-block;
+  background: white;
+  color: #444;
+  width: 190px;
+  border-radius: 5px;
+  border: thin solid #888;
+  box-shadow: 1px 1px 1px grey;
+  white-space: nowrap;
+}
+
 @media only screen and (min-width: 550px) {
   /* For mobile: */
   [class*="col-"] {
